syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "api/grpc/v1/interaction_event;interaction_event_grpc_service";

message RequestGenerateSummaryGrpcRequest {
  string tenant = 1;
  string interactionEventId = 2;
}

message InteractionEventIdGrpcResponse {
  string id = 1;
}

service interactionEventGrpcService {
  rpc RequestGenerateSummary(RequestGenerateSummaryGrpcRequest) returns (InteractionEventIdGrpcResponse);
}
